fix: remove js scrollbars in body & editor (#962)

--- a/src/assets/styles/page.scss
+++ b/src/assets/styles/page.scss
@@ -1,5 +1,6 @@
 html {
-    overflow: hidden;
+    overflow: auto;
+    scrollbar-color: #6b6b6b #272727;
 }
 
 body {
@@ -57,4 +58,22 @@ body {
 
 .settings-tabs .v-window {
     overflow-y: auto !important;
+}
+
+.editor-dialog .cm-editor {
+    height: calc(100vh - 48px);
+}
+
+::-webkit-scrollbar {
+    background-color: #272727;
+    width: 14px;
+    height: 14px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #6b6b6b;
+    border-radius: 7px;
+    border: 4px solid #272727;
+    min-width: 100px;
+    min-height: 100px;
 }
